--- a/website/public/index.html
+++ b/website/public/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Gears</title>
+    <meta charset="utf-8" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:700&display=swap&text=Gears"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="app"></div>
