--- a/website/public/index.html
+++ b/website/public/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:700&display=swap&text=Gears"
-      rel="stylesheet"
-    />
-  </head>
+  <head> </head>
   <body>
     <div class="app"></div>
     <script src="/index.js"></script>
